fix styling table overflow

--- a/src/app/modules/maintenance/preventive-maintenance/preventive-maintenance-list/preventive-maintenance-list.component.scss
+++ b/src/app/modules/maintenance/preventive-maintenance/preventive-maintenance-list/preventive-maintenance-list.component.scss
@@ -11,6 +11,8 @@
     }
 
     .ahm-table {
+        height: 33vh;
+        
         td {
             padding: 12px 8px;
         }
